--- a/src/assets/css/navbarFooter.css
+++ b/src/assets/css/navbarFooter.css
@@ -1,13 +1,13 @@
-a {
+a{
+  font-size: larger;
   text-decoration: none;
   color: white;
-  margin-left:30px ;
-  margin-right:30px ;
- 
+  margin-left: 120px;
+  margin-right: 50px;
 }
 
 nav {
-  background: #036d80;
+  background: #000607;
   padding: 10px;
   color: white;
   width: 100%;
@@ -23,10 +23,11 @@ nav {
 }
 
 .active {
-  color: rgb(7, 199, 52);
+  color: rgb(225, 17, 17);
 } 
 
 footer{
   margin-top: 350px;
-  background: #036d80;
+  background: #00080a;
+  margin-bottom: 2px;
 }
